# watermark-tool

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/base/: watermark.cpp  watermark.h
src/utils/: log.cpp  log.h  options.cpp  options.h
